@@ -1,2 +1,2 @@
 #!/bin/bash
-java -Djava.ext.dirs=lib -XX:MaxPermSize=128M -Xmx1024M -Xms1024M -jar spigot.jar
+java -XX:MaxPermSize=128M -Xmx1024M -Xms1024M -jar spigot.jar
